--- a/weatherApp/Info.plist
+++ b/weatherApp/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app need your location to provide best feature based on location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app need your location to provide best feature based on location</string>
 </dict>
 </plist>
